# POS

./: .env  .gitignore  CLAUDE.md  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_profiles.rs  m20250513_044443_users.rs  m20250514_045814_products.rs  m20250515_041208_sales_details.rs  m20250517_222307_seeding_profiles_data.rs  m20250517_230314_seeding_users_data.rs  m20250518_005554_seeding_products_data.rs  m20260105_001346_profiles_table.rs  m20260105_004129_users_table.rs  m20260105_012400_categories_table.rs  m20260105_012403_products_table.rs  m20260105_022312_payment_methods_table.rs  m20260105_023307_sales_table.rs  m20260105_023958_sale_payments_table.rs  m20260105_024536_sale_details_table.rs  m20260105_024908_refunds_table.rs  m20260105_025655_refund_details_table.rs  m20260105_025937_seed_initial_data.rs  m20260107_010000_permissions_table.rs  m20260107_010001_profile_permissions_table.rs  m20260107_010002_seed_permissions.rs
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/categories/: handlers.rs  structs.rs
src-tauri/src/entities/: categories.rs  mod.rs  payment_methods.rs  permissions.rs  prelude.rs  products.rs  profile_permissions.rs  profiles.rs  refound_details.rs  refounds.rs  refund_details.rs  refunds.rs  sale_details.rs  sale_payments.rs  sales.rs  sales_details.rs  users.rs
src-tauri/src/products/: commands.rs  handlers.rs  mod.rs  models.rs  structs.rs
src-tauri/src/reports/: handlers.rs  mod.rs  structs.rs
src-tauri/src/sales/: handlers.rs  mod.rs  structs.rs
src-tauri/src/sessions/: controllers.rs  handlers.rs  mod.rs  models.rs  structs.rs
src-tauri/src/users/: controllers.rs  handlers.rs  mod.rs  models.rs  structs.rs
src-tauri/src/utils/: mod.rs
src/Layouts/: AppLayout.tsx
src/actions/: categories.ts  products.ts  reports.ts  sales.ts  users.ts
src/auth/: View.tsx
src/components/: ErrorMessage.tsx  Modal.tsx  NavBar.tsx  NavItem.tsx  Navbar.tsx  Sidebar.tsx  (+4 more)
(+75 files in other folders)
