[package]
name = "pos_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pos_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.0", features = ["full"] }
sea-orm = { version = "1.1.11", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
dotenvy = "0.15.7"
bcrypt = "0.17.0"
tauri-plugin-store = "2"
