[package]
name = "sales_point"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sales_point_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace]
members = [".", "migration"]


[dependencies]
migration = { path = "migration" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
tokio = { version = "1.49.0", features = ["full"] }
cuid2 = "0.1.4"
chrono = "0.4.42"
